// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureCard Renders interactive horizontal card with button 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    min-height: 304px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-2 {
    min-height: 1px;
  }
}

.emotion-3 {
  -webkit-background-size: cover;
  background-size: cover;
  -webkit-background-position: right;
  background-position: right;
  height: 18vh;
}

.emotion-4 {
  box-sizing: border-box;
}

.emotion-5 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-5 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

@media screen and (max-width: 1023px) {
  .emotion-6 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    margin-bottom: 24px;
  }
}

.emotion-7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-7 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-7:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-7:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-8 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-9 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-10 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-10 {
    margin-bottom: 32px;
  }
}

.emotion-11 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-11 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-11::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-11::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-11 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-11::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-11::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-12 {
  margin-bottom: 8px;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 16px;
  height: 16px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-16 {
    max-width: 100%;
  }
}

.emotion-17 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

.emotion-19 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-19.emotion-19 {
  width: 16px;
  height: 16px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <a
              class="nk-card-link emotion-7"
              href="href"
            >
              <section
                class="emotion-8"
              >
                <h1
                  class="nk-headline-heading emotion-9"
                >
                  Interactive Horizontal Card
                </h1>
              </section>
            </a>
          </div>
          <div
            class="emotion-10"
          >
            <p
              class="emotion-11"
            >
              I am interactive
            </p>
          </div>
          <div
            class="emotion-12"
          >
            <div
              class="emotion-13"
            >
              <button
                class="emotion-14"
                data-testid="button"
                type="button"
              >
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                  >
                    <span
                      class="emotion-17"
                    >
                      Read more
                    </span>
                  </div>
                  <div
                    class="emotion-16"
                  >
                    <svg
                      aria-hidden="true"
                      class="emotion-19 emotion-20"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    min-height: 304px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: block;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-2 {
    min-height: 1px;
  }
}

.emotion-3 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    min-width: 1px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media screen and (max-width: 479px) {
  .emotion-5 {
    padding: 16px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-5 {
    padding: 16px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-5 {
    padding: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    padding: 32px;
  }
}

.emotion-5 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

@media screen and (max-width: 1023px) {
  .emotion-7 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    margin-bottom: 24px;
  }
}

.emotion-8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-8 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-8:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-8:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-9 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-10 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-11 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-11 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-11 {
    margin-bottom: 24px;
  }
}

.emotion-12 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-12 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-12::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-12::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-12 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-12::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-12::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 16px;
  height: 16px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-16 {
    max-width: 100%;
  }
}

.emotion-17 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

.emotion-19 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-19.emotion-19 {
  width: 16px;
  height: 16px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <a
                class="nk-card-link emotion-8"
                href="href"
              >
                <section
                  class="emotion-9"
                >
                  <h1
                    class="nk-headline-heading emotion-10"
                  >
                    Interactive Horizontal Card
                  </h1>
                </section>
              </a>
            </div>
            <div
              class="emotion-11"
            >
              <p
                class="emotion-12"
              >
                I am interactive
              </p>
            </div>
            <div
              class="emotion-13"
            >
              <button
                class="emotion-14"
                data-testid="button"
                type="button"
              >
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                  >
                    <span
                      class="emotion-17"
                    >
                      Read more
                    </span>
                  </div>
                  <div
                    class="emotion-16"
                  >
                    <svg
                      aria-hidden="true"
                      class="emotion-19 emotion-20"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeatureCard Renders interactive horizontal card without button 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    min-height: 304px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-2 {
    min-height: 1px;
  }
}

.emotion-3 {
  -webkit-background-size: cover;
  background-size: cover;
  -webkit-background-position: right;
  background-position: right;
  height: 18vh;
}

.emotion-4 {
  box-sizing: border-box;
}

.emotion-5 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-5 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

@media screen and (max-width: 1023px) {
  .emotion-6 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    margin-bottom: 24px;
  }
}

.emotion-7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-7 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-7:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-7:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-8 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-9 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-10 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-10 {
    margin-bottom: 32px;
  }
}

.emotion-11 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-11 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-11::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-11::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-11 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-11::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-11::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <a
              class="nk-card-link emotion-7"
              href="href"
            >
              <section
                class="emotion-8"
              >
                <h1
                  class="nk-headline-heading emotion-9"
                >
                  Interactive Horizontal Card
                </h1>
              </section>
            </a>
          </div>
          <div
            class="emotion-10"
          >
            <p
              class="emotion-11"
            >
              I am interactive
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    min-height: 304px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: block;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-2 {
    min-height: 1px;
  }
}

.emotion-3 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    min-width: 1px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media screen and (max-width: 479px) {
  .emotion-5 {
    padding: 16px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-5 {
    padding: 16px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-5 {
    padding: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    padding: 32px;
  }
}

.emotion-5 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

@media screen and (max-width: 1023px) {
  .emotion-7 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    margin-bottom: 24px;
  }
}

.emotion-8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-8 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-8:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-8:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-9 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-10 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-11 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-11 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-11 {
    margin-bottom: 24px;
  }
}

.emotion-12 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-12 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-12::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-12::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-12 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-12::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-12::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <a
                class="nk-card-link emotion-8"
                href="href"
              >
                <section
                  class="emotion-9"
                >
                  <h1
                    class="nk-headline-heading emotion-10"
                  >
                    Interactive Horizontal Card
                  </h1>
                </section>
              </a>
            </div>
            <div
              class="emotion-11"
            >
              <p
                class="emotion-12"
              >
                I am interactive
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeatureCard Renders interactive vertical card with button 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    min-height: 380px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    min-height: 1px;
  }
}

.emotion-2 {
  -webkit-background-size: cover;
  background-size: cover;
  -webkit-background-position: right;
  background-position: right;
  height: 18vh;
}

.emotion-3 {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-4 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

@media screen and (max-width: 1023px) {
  .emotion-5 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    margin-bottom: 24px;
  }
}

.emotion-6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-6 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-6:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-6:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-7 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-8 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-9 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-9 {
    margin-bottom: 32px;
  }
}

.emotion-10 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-10 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-10::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-10::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-10 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-10::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-10::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-11 {
  margin-bottom: 8px;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-13 svg {
  width: 16px;
  height: 16px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-15 {
    max-width: 100%;
  }
}

.emotion-16 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

.emotion-18 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-18.emotion-18 {
  width: 16px;
  height: 16px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <a
            class="nk-card-link emotion-6"
            href="href"
          >
            <section
              class="emotion-7"
            >
              <h1
                class="nk-headline-heading emotion-8"
              >
                Interactive Horizontal Card
              </h1>
            </section>
          </a>
        </div>
        <div
          class="emotion-9"
        >
          <p
            class="emotion-10"
          >
            I am interactive
          </p>
        </div>
        <div
          class="emotion-11"
        >
          <div
            class="emotion-12"
          >
            <button
              class="emotion-13"
              data-testid="button"
              type="button"
            >
              <div
                class="emotion-14"
              >
                <div
                  class="emotion-15"
                >
                  <span
                    class="emotion-16"
                  >
                    Read more
                  </span>
                </div>
                <div
                  class="emotion-15"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-18 emotion-19"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeatureCard Renders interactive vertical card without button 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    min-height: 380px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    min-height: 1px;
  }
}

.emotion-2 {
  -webkit-background-size: cover;
  background-size: cover;
  -webkit-background-position: right;
  background-position: right;
  height: 18vh;
}

.emotion-3 {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-4 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

@media screen and (max-width: 1023px) {
  .emotion-5 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    margin-bottom: 24px;
  }
}

.emotion-6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-6 .nk-headline-kicker {
  color: #0a68c1;
}

.emotion-6:hover:not(:disabled) .nk-headline-kicker {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:active:not(:disabled) .nk-headline-kicker {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited:not(:disabled) .nk-headline-kicker {
  color: #7547a3;
}

.emotion-6:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-7 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-8 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-9 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-9 {
    margin-bottom: 32px;
  }
}

.emotion-10 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-10 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-10::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-10::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-10 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-10::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-10::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <a
            class="nk-card-link emotion-6"
            href="href"
          >
            <section
              class="emotion-7"
            >
              <h1
                class="nk-headline-heading emotion-8"
              >
                Interactive Horizontal Card
              </h1>
            </section>
          </a>
        </div>
        <div
          class="emotion-9"
        >
          <p
            class="emotion-10"
          >
            I am interactive
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeatureCard Renders non-interactive horizontal card 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    min-height: 304px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-2 {
    min-height: 1px;
  }
}

.emotion-3 {
  -webkit-background-size: cover;
  background-size: cover;
  -webkit-background-position: right;
  background-position: right;
  height: 18vh;
}

.emotion-4 {
  box-sizing: border-box;
}

.emotion-5 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-5 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

@media screen and (max-width: 1023px) {
  .emotion-6 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-6 {
    margin-bottom: 24px;
  }
}

.emotion-7 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-7 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-8 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-9 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-9 {
    margin-bottom: 32px;
  }
}

.emotion-10 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-10 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-10::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-10::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-10 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-10::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-10::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <section
              class="emotion-7"
            >
              <h1
                class="nk-headline-heading emotion-8"
              >
                Non-Interactive Horizontal Card
              </h1>
            </section>
          </div>
          <div
            class="emotion-9"
          >
            <p
              class="emotion-10"
            >
              I am non-interactive
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    min-height: 248px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    min-height: 304px;
  }
}

.emotion-2 {
  box-sizing: border-box;
  display: block;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-left: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-2 {
    min-height: 1px;
  }
}

.emotion-3 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    min-width: 1px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media screen and (max-width: 479px) {
  .emotion-5 {
    padding: 16px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-5 {
    padding: 16px;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-5 {
    padding: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    padding: 32px;
  }
}

.emotion-5 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

@media screen and (max-width: 1023px) {
  .emotion-7 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-7 {
    margin-bottom: 24px;
  }
}

.emotion-8 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-8 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-8::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-8::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-9 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-10 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-10 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-10 {
    margin-bottom: 24px;
  }
}

.emotion-11 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-11 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-11::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-11::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-11 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-11::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-11::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <section
                class="emotion-8"
              >
                <h1
                  class="nk-headline-heading emotion-9"
                >
                  Non-Interactive Horizontal Card
                </h1>
              </section>
            </div>
            <div
              class="emotion-10"
            >
              <p
                class="emotion-11"
              >
                I am non-interactive
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeatureCard Renders non-interactive vertical card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    min-height: 380px;
  }
}

.emotion-1 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    min-height: 1px;
  }
}

.emotion-2 {
  -webkit-background-size: cover;
  background-size: cover;
  -webkit-background-position: right;
  background-position: right;
  height: 18vh;
}

.emotion-3 {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  padding: 24px;
}

.emotion-4 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

@media screen and (max-width: 1023px) {
  .emotion-5 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-5 {
    margin-bottom: 24px;
  }
}

.emotion-6 {
  padding: 1px 0px;
}

@media screen and (max-width: 479px) {
  .emotion-6 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-6::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-6::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-6 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-6::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-6::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-6 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-6::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.09955357142857141em;
  }

  .emotion-6::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-6 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-6::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-6::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-6 {
    font-family: "Source Serif Pro",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-6::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.08368055555555559em;
  }

  .emotion-6::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

.emotion-7 {
  display: inline;
  font: inherit;
  margin: 0;
}

@media screen and (max-width: 1023px) {
  .emotion-8 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-8 {
    margin-bottom: 32px;
  }
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
}

@media screen and (max-width: 1023px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.128125em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-9 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-9::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.11145833333333338em;
  }

  .emotion-9::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <section
            class="emotion-6"
          >
            <h1
              class="nk-headline-heading emotion-7"
            >
              Interactive Horizontal Card
            </h1>
          </section>
        </div>
        <div
          class="emotion-8"
        >
          <p
            class="emotion-9"
          >
            I am interactive
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
